--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,22 @@
 			<version>${log4j.version}</version>
 		</dependency>
 
+	        <dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>1.21.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-taskqueue</artifactId>
+			<version>v1beta2-rev40-1.21.0</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.10</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -76,8 +92,10 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.12.4</version>
-				</plugin>
-			</plugins>
+			</plugin>
+
+
+     		</plugins>	
 		</pluginManagement>
 		<plugins>
 			<plugin>
